Fixed z-index issue with zoomed images

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -20,7 +20,8 @@ img {
     transform: scale(1.9);
     cursor: zoom-out;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    z-index: 1;
+    z-index: 100;
+    position: relative;
 }
 
 .center {
